Fix issues with loading first thumbnail Generation of config Automate configuration and deployment Feature complete for MVP Refactor the add-on to make more sense and be less intrusive
